--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ canvas{
 #particles-js{
   width: 100%;
   height: 100%;
-  background-color: #b61924;
+  background-color: #EE82EE;
   background-image: url('');
   background-size: cover;
   background-position: 50% 50%;
@@ -261,7 +261,7 @@ section{
 }
 
 .hero{
-	background:url(https://unsplash.imgix.net/photo-1419332563740-42322047ff09?q=75&fm=jpg&s=f1e7d176e154bfe4a511b9ecd95a0a84);
+	background:url(http://kh13.com/forum/uploads/gallery/album_1282/gallery_45323_1282_792131.jpg);
 	background-size: cover;
 	height: 100%;
     max-height:100%;
@@ -271,10 +271,10 @@ section{
 	margin-top:13%;
 }
 .middle{
-	background:url(https://unsplash.imgix.net/photo-1418226970361-9f1f7227d638?q=75&fm=jpg&s=4a5f190c7499eff6f7c77d88d8abf57e);
+	background:url(https://ataintedcanvas.files.wordpress.com/2015/08/ugskne2.jpg);
 }
 .lower{
-	background:url(https://unsplash.imgix.net/reserve/URG2BbWQQ9SAcqLuTOLp_BP7A9947.jpg?q=75&fm=jpg&s=604dc379bd8749d90ca2b9c8ec270f63);
+	background:url(https://ataintedcanvas.files.wordpress.com/2015/08/icon4012-1438147097.jpg);
 }
 .bottom{
 	background:#26292C;
