--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,9 @@ section{
 .lower{
 	background:url(https://ataintedcanvas.files.wordpress.com/2015/08/icon4012-1438147097.jpg);
 }
+.lowerlower{
+	background:url(https://ataintedcanvas.files.wordpress.com/2015/08/december1994.jpg);
+}
 .bottom{
 	background:#26292C;
 }
