--- a/css/css.css
+++ b/css/css.css
@@ -1,10 +1,6 @@
-/*@font-face {
+@font-face {
     font-family: 'HelveticaNeue';
     src: url('font/HelveticaNeue.ttf');
-}*/
-@font-face {
-    font-family: 'sol';
-    src: url('font/sol.ttf');
 }
 
 /* -------- GENERAL -------- */
@@ -31,7 +27,7 @@ html, body {
 	color: #fff;
 }
 html a {
-    color: #BDE6E0;
+    color: #87CEFA;
 }
 html a:hover {
     color: #000;
@@ -71,7 +67,7 @@ html a:hover {
     margin-right: auto!important;
     width: 50px;
     margin-bottom: 20px;
-    color: #BDE6E0;
+    color: #87CEFA;
 }
 
 
@@ -94,6 +90,7 @@ html a:hover {
 }
 #hello {
     z-index: 10;
+    color: #000000;
 }
 #intro {
     display: table-cell;
@@ -108,9 +105,10 @@ html a:hover {
     top: 0px!important;
     text-align: center;
     z-index: 5;
+    color: #000000;
 }
 #intro h2 {
-    border: 3px solid #000;
+    border: 3px solid #000000;
     width: 225px;
     margin-left: auto;
     margin-right: auto;
@@ -119,18 +117,19 @@ html a:hover {
     margin-top: 0px;
     font-size: 36px;
     font-weight: 400;
-    color: #000;
+    color: #000000;
 }
 #intro h3 {
     margin-bottom: 0px;
     font-size: 20px;
+    color: #000000;
 }
 #intro a {
-    color: #000;
+    color: #000000;
     font-size: 14px;
 }
 #intro a:hover {
-    color: #D1EEEE;
+    color: #00CED1;
     text-decoration: none;
 }
 
@@ -178,7 +177,7 @@ html a:hover {
     background-color: #fff!important;
 }
 #myNavbar .active a {
-    color: #ADEAEA!important;
+    color: #87CEFA!important;
 }
 
 
@@ -189,11 +188,11 @@ html a:hover {
     text-align: right;
     margin-top: 0px;
 }
-#hi-im-sol {
+#hi-im-henry {
     padding-left: 5%;
     padding-right: 5%;
 }
-#hi-im-sol img {
+#hi-im-henry img {
     width: 80%;
     max-width: 200px;
     border-radius: 100%;
@@ -202,7 +201,7 @@ html a:hover {
 }
 
 @media (min-width: 768px){
-    #hi-im-sol img {
+    #hi-im-henry img {
         width: 80%;
         max-width: 200px;
         border-radius: 100%;
@@ -214,7 +213,7 @@ html a:hover {
     }
 }
 @media (max-width: 767px){
-    #hi-im-sol img {
+    #hi-im-henry img {
         width: 80%;
         max-width: 200px;
         border-radius: 100%;
@@ -307,11 +306,4 @@ html a:hover {
 }
 #contact i {
     margin: 50px 50px 50px 50px;
-}
-
-#snapwidget {
-    width: 77%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
 }
