--- a/_layouts/date.html
+++ b/_layouts/date.html
@@ -10,7 +10,7 @@
   <title>henry y.</title>
 
   <!--Favicon-->
-  <link rel="icon" href="http://localhost:4000/assets/img/favicon.jpg">
+  <link rel="icon" href="{{site.url}}/assets/img/favicon.jpg">
 
   <!--Description-->
   <!--Author-->
@@ -21,9 +21,9 @@
   <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 
   <!-- Custom CSS -->
-	<link type="text/css" rel="stylesheet" href="/assets/css/main.css">
+  <link type="text/css" rel="stylesheet" href="/assets/css/posts.css">
 
-  	<div class="container-fluid navbar-container m-sm-5">
+    <div class="container-fluid navbar-container m-sm-5">
       <!-- Header -->
       <nav class="navbar navbar-toggleable-sm navbar-light px-1 py-3 my-3 mb-sm-5">
   <a class="navbar-brand ml-2" href="/">henry y.</a>
@@ -33,13 +33,16 @@
   <div class="collapse navbar-collapse text-center" id="navbarCollapse">
     <ul class="navbar-nav ml-auto my-auto">
 
-
-        <li class="nav-item">
+      <li class="nav-item">
           <a class="nav-link" href="/blog.html">blog</a>
         </li>
 
         <li class="nav-item">
           <a class="nav-link" href="/reviews.html">reviews</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="../../../../../assets/resume.pdf">resume</a>
         </li>
 
         <li class="nav-item">
@@ -55,25 +58,20 @@
 
 <body>
 <div>
-  <div id="row" align = "left">
+  <div id = "row">
     <div class = "text">
+        <header class="post-header">
 
-      <head>
+          <h3 class="post-title">{{ page.title }}</h3>
+          <p>
+            {{page.date | date: "%-Y %m %d"}}
+          </header>
 
-</head>
-<body>
-<div>
-  <div id="row">
-    <div class = "text">
-      <ul>
-         <font color = "black">
-    </h5>
-        </font>
-      </ul>
+          <div class="post">
+            <article class="post-content">
+              {{ content }}
+            </article>
+
+          </div>
     </div>
-  </div>
-</body>
-
-
-    </div>
-  </div>
+</div>
