--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,6 +42,10 @@
         </li>
 
         <li class="nav-item">
+          <a class="nav-link" href="assets/resume.pdf">resume</a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link" href="https://www.linkedin.com/in/henryhyu">linkedin</a>
         </li>
 
