--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="assets/resume.pdf">resume</a>
+          <a class="nav-link" href="https://www.youtube.com/c/smallbraingames/">youtube</a>
         </li>
 
         <li class="nav-item">
